# test-rocket

./: .env.example  .gitignore  Cargo.toml  README.md  mix-manifest.json  package-lock.json  package.json  webpack.mix.js
assets/js/: App.svelte
migrations/2020-11-13-195421_create_users/: up.sql
src/: main.rs  models.rs  users.rs
src/db/: users.rs
src/routes/: users.rs
templates/: index.html.hbs  list.html.hbs  new.html.hbs  update.html.hbs
