[package]
name = "test-rocket"
version = "0.1.0"
authors = ["Patrique Ouimet <patrique.ouimet@gmail.com>"]

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]
