[package]
name = "test-rocket"
version = "0.1.0"
authors = ["Patrique Ouimet <patrique.ouimet@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"
rocket-multipart-form-data = "0.9.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates", "serve"]
